# Fourier-Neural-Operator

./: .gitignore  README.md  pyproject.toml
scripts/: benchmark_2d.py  benchmark_resolution.py  benchmark_speed.py  generate_data.py  generate_data_2d.py  plot_loss.py  train.py  train_2d.py
src/fno/models/: base.py  fno1d.py  fno2d.py  mlp.py
src/fno/solvers/: base.py  burgers_1d.py  navier_stokes_2d.py
src/fno/training/: config.py  metrics.py  trainer.py
tests/: conftest.py
tests/models/: test_fno1d.py  test_fno2d.py  test_mlp.py
tests/solvers/: test_burgers_1d.py  test_navier_stokes_2d.py
tests/training/: test_metrics.py  test_trainer.py
